# Intern_Practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
01-04-2026_Custom-Middleware/: Node_style_hooks.py  wrap_style_hooks.py
03-03-2026_SVM/: SVM_Classifier.py  SVM_GridSearchCV.py
05-02-2026_flask/: app.py
05-03-2026_KNN/: KNN_Classifier.py  knn_pipeline.pkl
06-02-2026_fastapi/: fapi.py  login_form.py  main.py
06-03-2026_Practice/: General_MLcode_template.py
09-02-2026_DbConnection/: Dbsql_test.py  SQLQuery1.sql  SQLQuery3.sql  SQLQuery4.sql  STUDENTS_DB.db  dbtest.py  sql_joins.py
10-02-2026_Task1/: crud.py  database.py  main.py  models.py  schemas.py
10-03-2026_Kmeans/: kmeans_clustering.py
10feb_Task1/: crud.py  database.py  main.py  schemas.py
11-02-2026_MongoDB/: 1.connect.py  2.insert.py  3.find.py  4.show dbs_collection.py  5.update.py  6.delete.py  main.py  test.py
11thfeb_MongoDB/: 3.find.py  6.delete.py  main.py  test.py
12-02-2026_Practice/: app.py
12thfeb_Practice/: app.py
13-02-2026_BeautifulSoup/: 01_tags.py  Pagination.py  sample.html  web_scrapping.py
13-03-2026_Apriori/: apriori_algo.py
13-04-2026_Chatbot-Practice/: Database.py  Rag.py  main.py
13thfeb_BeautifulSoup/: 01_tags.py  Pagination.py  sample.html  web_scrapping.py
16-02-2026_Selenium/: app.py  demo.py  main.py  nhl_teams_all.csv  nhl_teams_selenium_all.csv  pagination.py
16-03-2026_DeepLearning/: Social_Ads_Classification_DL.ipynb  single_layer_model.ipynb
16thfeb_Selenium/: app.py  main.py  nhl_teams_all.csv  pagination.py
17-02-2026_Task2/: README.md  main.py
17thfeb_Task2/: README.md
18-03-2026_CNN/: CNN.ipynb
19-02-2026_LinReg/: insurance.csv  insurance.ipynb  main.py
19-03-2026_RNN&LSTM/: LSTM.ipynb  RNN.ipynb
19thfeb_Lin_Reg/: insurance.ipynb  main.py
20-03-2026_Transformer/: Transformer.ipynb
21-04-2026_Streamlit_chatbot/: Rag.py  app.py  main.py
23-02-2026_LangChain/: main.py
23-02-2026_LogisticReg/: WA_Fn-UseC_-HR-Employee-Attrition.csv  logistic.py
23-03-2026_LangChain/: main.py
23rdfeb_Logistic_Reg/: logistic.py
24-02-2026_DecisionTreeClassifier/: Dec_Classification.py  plant_disease_dataset.csv
24-03-2026_LangChain_Chatbot/: chatbot.py
24thfeb_DecisionTree/: Dec_Classification.py
25-02-2026_DecisionTreeRegressor/: Dec_Regressor.py
25-03-2026_REQ_TO_TASK-PRED/: app.py  prompt.py
25-03-2026_Smart_AI_Agent/: app.py  requirements.md  tasks.md  user_stories.md
26-02-2026_RandomForest/: Random_forest_Regressor.py
26thfeb_Random_forest/: Random_forest_Classifier.py
27-02-2026_Task3/: insurance_rfreg_sql_pipeline.py
27-03-2026_LangChain-memory/: agent.py  app.py  config.py  memory.py  tools.py
27thfeb_Task3/: insurance_rfreg_sql_pipeline.py
30-03-2026_Middleware/: main.py  summarization_agent.py
30-03-2026_Summarization-Middleware/: mongodb_summary_agent.py  summarization_agent.py
(+37 files in other folders)
