[project]
name = "intern-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "nidhiyadav21",email = "nidhiyadavv41@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "fastapi (>=0.128.2,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


