[project]
name = "intern-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "nidhiyadav21",email = "nidhiyadavv41@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "fastapi (>=0.128.2,<0.129.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "selenium (>=4.40.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mlxtend (>=0.24.0,<0.25.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain-core (>=1.2.20,<2.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "tavily-python (>=0.7.23,<0.8.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "pypdf (>=6.9.2,<7.0.0)",
    "pymupdf (>=1.27.2.2,<2.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


